--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,13 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 32
-    buildToolsVersion "29.0.3"
 
     defaultConfig {
         applicationId "com.anbdevelopers.piechartgenerator"
         minSdkVersion 21
         targetSdkVersion 32
-        versionCode 14
-        versionName "1.7.5"
+        versionCode 16
+        versionName "1.7.7"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -23,6 +22,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'com.anbdevelopers.piechartgenerator'
 }
 
 dependencies {
@@ -38,7 +38,7 @@ dependencies {
     implementation("com.google.guava:guava:29.0-android")
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.jsibbold:zoomage:1.3.1'
-    implementation 'com.google.android.gms:play-services-ads:20.5.0'
+    implementation 'com.google.android.gms:play-services-ads:21.3.0'
     implementation 'com.google.ads.mediation:mopub:5.18.0.0'
 
     implementation 'androidx.multidex:multidex:2.0.1'
@@ -46,10 +46,10 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation  'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'com.google.ads.mediation:facebook:6.11.0.0'
-    implementation 'com.facebook.android:audience-network-sdk:6.8.0'
- //   implementation 'com.google.android.ads:mediation-test-suite:1.5.0'
+    implementation 'com.facebook.android:audience-network-sdk:6.11.0'
     def lifecycle_version = "2.0.0"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-runtime:$lifecycle_version"
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+    implementation 'androidx.work:work-runtime-ktx:2.7.1'
 }
